--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   display: flex;
-  justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 #screen,
@@ -22,6 +22,7 @@ body {
   width: 450px;
   border: 2px solid black;
   border-radius: 20px;
+  margin-top: 10px;
 }
 
 #screen {
@@ -91,4 +92,21 @@ body {
   font-size: 25px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
+}
+
+#credits {
+  position: absolute;
+  bottom: 10px;
+  font-size: 20px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+#credits a {
+  text-decoration: none;
+  color: black;
+}
+
+#credits a img {
+  position: relative;
+  bottom: -5px;
 }
