Disabled selecting textContent from buttons

--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,10 @@ body {
   font-size: 25px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 #credits {
