--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
   justify-content: center;
   flex-direction: column;
   height: 98vh;
+  background-color: #00ffc0;
 }
 
 #calculator {
@@ -11,11 +12,12 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: rgb(189, 189, 189);
+  background-color: rgb(17, 17, 17);
   gap: 10px;
   width: 450px;
   border: 2px solid black;
   border-radius: 20px;
+  box-shadow: black 3px 3px 12px;
 }
 
 #screen,
@@ -29,7 +31,7 @@ body {
 #screen {
   display: flex;
   flex-direction: column;
-  background-color: white;
+  background-color: rgb(49, 49, 49);
   width: 400px;
   margin-top: 20px;
   display: flex;
@@ -45,25 +47,28 @@ body {
   padding-right: 15px;
   padding-top: 5px;
   font-size: 20px;
+  color: rgb(212, 212, 212);
 }
 
 #bottom-value {
   padding-right: 15px;
   padding-bottom: 15px;
   font-size: 40px;
+  color: rgb(212, 212, 212);
 }
 
-#clear-delete-container {
+#btn-container {
   display: flex;
+  flex-wrap: wrap;
   gap: 10px;
-  align-content: center;
   justify-content: center;
-  margin-top: 10px;
+  align-content: center;
+  margin-top: 30px;
+  margin-bottom: 20px;
 }
 
 #btn-clear,
 #btn-delete {
-  width: 193px;
   text-align: center;
   height: 70px;
   display: flex;
@@ -75,25 +80,15 @@ body {
 }
 
 #btn-clear {
-  background-color: rgb(255, 160, 160);
+  background-color: rgb(255, 93, 93);
 }
 
 #btn-delete {
-  background-color: rgb(160, 160, 255);
-}
-
-#btn-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  justify-content: center;
-  align-content: center;
-  margin-top: 10px;
-  margin-bottom: 20px;
+  background-color: rgb(93, 93, 255);
 }
 
 .calc-btn {
-  background-color: white;
+  background-color: rgb(71, 71, 71);
   width: 89px;
   height: 70px;
   display: flex;
@@ -106,6 +101,11 @@ body {
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  color: rgb(212, 212, 212);
+}
+
+.calc-btn#btn-equals {
+  width: 192px;
 }
 
 #credits {
